--- a/buildable/docs/scratch.mdx
+++ b/buildable/docs/scratch.mdx
@@ -82,3 +82,20 @@ setTick(() => {
     }
   }
 });
+
+
+
+    const toUpgrade = [
+      eVehicleModType.VMT_TURBO,
+      eVehicleModType.VMT_ENGINE,
+      eVehicleModType.VMT_GEARBOX,
+    ];
+    SetVehicleModKit(myVehicle, 0);
+    for (let i = 0; i < 3; i++) {
+      const modToApply = toUpgrade[i];
+      const maxVar = GetNumVehicleMods(myVehicle, modToApply);
+      ToggleVehicleMod(myVehicle, modToApply, true);
+      SetVehicleMod(myVehicle, modToApply, maxVar - 1, false);
+      SetVehicleColours(myVehicle, 12, 12);
+      SetVehicleWindowTint(myVehicle, 1);
+    }
