feat(notifications/better_teles/blips) spawn fixes

--- a/buildable/docs/scratch.mdx
+++ b/buildable/docs/scratch.mdx
@@ -462,3 +462,163 @@ local vehicle = GetVehiclePedIsUsing(PlayerPedId())
     end
 
 end)
+
+onNet("forfi-debugtools:testsound", (args: string[]) => {
+if (args[0] && args[1]) {
+PlaySoundFrontend(-1, args[0], args[1], true);
+}
+});
+
+onNet("forfi-debugtools:getpos", () => {
+const pos = GetEntityCoords(PlayerPedId(), true);
+const heading = GetEntityHeading(PlayerPedId());
+const text =
+"x: " +
+pos[0].toFixed(2) +
+", y: " +
+pos[1].toFixed(2) +
+", z: " +
+pos[2].toFixed(2) +
+", heading: " +
+heading.toFixed(2);
+console.log(text);
+// SendNuiMessage(
+// JSON.stringify({
+// action: "OPEN_TEXTBOX",
+// text: text,
+// })
+// );
+// SetNuiFocus(true, true);
+});
+onNet("forfi-debugtools:tpto", (pid: string) => {
+if (pid) {
+const targetPed = GetPlayerPed(GetPlayerFromServerId(parseInt(pid)));
+const targetCoords = GetEntityCoords(targetPed, true);
+TpToCoords(targetCoords[0], targetCoords[1], targetCoords[2] + 0.5);
+}
+});
+
+let debugCamActive = false;
+let debugCam: number;
+let debugCamPos: any;
+onNet("forfi-debugtools:debugcam", async () => {
+if (debugCamActive === false) {
+const playerPed = PlayerPedId();
+const playerPos = GetEntityCoords(PlayerPedId(), true);
+FreezeEntityPosition(playerPed, true);
+// CreateCamWithParams("DEFAULT_SCRIPTED_CAMERA", xPos, yPos, zPos, updownRot, circleRot, leftrightRot, fov, false, 2);
+debugCamPos = {
+x: playerPos[0],
+y: playerPos[1],
+z: playerPos[2],
+xRot: 0.0,
+yRot: 0.0,
+zRot: 0.0,
+fov: 45.0,
+};
+debugCam = CreateCamWithParams(
+"DEFAULT_SCRIPTED_CAMERA",
+debugCamPos.x,
+debugCamPos.y,
+debugCamPos.z,
+debugCamPos.xRot,
+debugCamPos.yRot,
+debugCamPos.zRot,
+debugCamPos.fov,
+false,
+2
+);
+SetCamActive(debugCam, true);
+RenderScriptCams(true, true, 1000, true, false);
+debugCamActive = true;
+while (debugCamActive) {
+await Delay(100);
+updateDebugCam();
+}
+} else {
+debugCamActive = false;
+RenderScriptCams(false, true, 1000, true, false);
+SetCamActive(debugCam, false);
+DestroyCam(debugCam, true);
+const playerPed = PlayerPedId();
+FreezeEntityPosition(playerPed, false);
+}
+});
+
+/\*\*
+
+- Updates the debug camera position and rotation.
+- Creates a new camera with the updated parameters and sets it as active with interpolation.
+- Deactivates and destroys the previous debug camera.
+  \*/
+  function updateDebugCam() {
+  let newCam = CreateCamWithParams(
+  "DEFAULT_SCRIPTED_CAMERA",
+  debugCamPos.x,
+  debugCamPos.y,
+  debugCamPos.z,
+  debugCamPos.xRot,
+  debugCamPos.yRot,
+  debugCamPos.zRot,
+  debugCamPos.fov,
+  false,
+  2
+  );
+  SetCamActiveWithInterp(newCam, debugCam, 100, 0, 0);
+  SetCamActive(debugCam, false);
+  DestroyCam(debugCam, true);
+  debugCam = newCam;
+  }
+
+onNet("forfi-debugtools:campos", async () => {
+if (debugCamActive === true) {
+const text = JSON.stringify(debugCamPos);
+console.log(text);
+// SendNuiMessage(
+// JSON.stringify({
+// action: "OPEN_TEXTBOX",
+// text: text,
+// })
+// );
+// SetNuiFocus(true, true);
+}
+});
+
+onNet("forfi-debugtools:setcampos", async (args: string[]) => {
+if (debugCamActive === true) {
+if (args[0] && args[1] && args[2]) {
+debugCamPos = {
+x: parseFloat(args[0]),
+y: parseFloat(args[1]),
+z: parseFloat(args[2]),
+xRot: 0.0,
+yRot: 0.0,
+zRot: 0.0,
+fov: 45.0,
+};
+}
+}
+});
+// RegisterNuiCallbackType("debugtools:close");
+// on("\_\_cfx_nui:debugtools:close", (data: any, cb: any) => {
+// SetNuiFocus(false, false);
+// });
+// setTick(() => {
+// if (IsControlJustReleased(1, 56)) {
+// debugInfoEnabled = !debugInfoEnabled;
+// }
+// if (debugInfoEnabled) {
+// const pos = GetEntityCoords(PlayerPedId(), true);
+// const heading = GetEntityHeading(PlayerPedId());
+// const text =
+// "X: " +
+// pos[0].toFixed(2) +
+// ", Y: " +
+// pos[1].toFixed(2) +
+// ", Z: " +
+// pos[2].toFixed(2) +
+// ", H: " +
+// heading.toFixed(2);
+// emit("showText", 0.75, 0.005, 0.3, text, 170, 170, 170, 255);
+// }
+// });
